--- a/xpad-noone-debian/debian/changelog
+++ b/xpad-noone-debian/debian/changelog
@@ -1,3 +1,9 @@
+xpad-noone (1.0-99pika3.lunar) mantic; urgency=medium
+
+  *Update to mantic.
+ 
+ -- Ward Nakchbandi <hotrod.master@hotmail.com>  Thu, 04 Oct 2022 17:50:00 +0300
+
 xpad-noone (1.0-99pika2.lunar) lunar; urgency=medium
 
   *Update to lunar.
