--- a/xpad-noone-debian/debian/changelog
+++ b/xpad-noone-debian/debian/changelog
@@ -1,4 +1,4 @@
-xpad-noone (1.0-99pika3.lunar) mantic; urgency=medium
+xpad-noone (1.0-99pika4.mantic) mantic; urgency=medium
 
   *Update to mantic.
  
