Update to static codename

--- a/xpad-noone-debian/debian/changelog
+++ b/xpad-noone-debian/debian/changelog
@@ -1,12 +1,12 @@
-xpad-noone (1.0-99pika4.mantic) mantic; urgency=medium
+xpad-noone (1.0-100pika1) pikauwu; urgency=medium
 
-  *Update to mantic.
+  * Update to pikauwu.
  
  -- Ward Nakchbandi <hotrod.master@hotmail.com>  Thu, 04 Oct 2022 17:50:00 +0300
 
 xpad-noone (1.0-99pika2.lunar) lunar; urgency=medium
 
-  *Update to lunar.
+  * Update to lunar.
  
  -- Ward Nakchbandi <hotrod.master@hotmail.com>  Thu, 04 Oct 2022 17:50:00 +0300
 
